# SDL2-Template

./: CMakeLists.txt  README.md  main.cpp  start.sh
include/: Application.h
src/: Application.cpp  bus.cc  main.cpp
